--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -39,6 +39,13 @@ video {
   z-index: 0;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 @media (pointer: coarse) and (hover: none) {
   body {
     background: url("../img/bg-mobile-fallback.jpg") #002E66 no-repeat center center scroll;
