--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -39,6 +39,16 @@ video {
   z-index: 0;
 }
 
+img {
+   position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+}
+
 @media (pointer: coarse) and (hover: none) {
   body {
     background: url("../img/bg-mobile-fallback.jpg") #002E66 no-repeat center center scroll;
