--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -55,7 +55,8 @@ video {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #cd9557;
+  background-color: #F8F8FF
+;
   opacity: 0.7;
   z-index: 1;
 }
